# lotoAI

./: .env.example  .gitignore  README.md  debug_rag.py  pyproject.toml
backend/: README.md
backend/gateway/: Dockerfile  requirements.txt
backend/gateway/app/: main.py
backend/gateway/tests/: test_main.py
docs/: CHAT_CONFIG.md  OBSERVABILITY.md  README.md  TESTING.md
frontend/: README.md
frontend/mobile/: Dockerfile  package.json
frontend/vite-app/: Dockerfile  README.md  index.html  package.json  tailwind.config.js
frontend/vite-app/src/: App.css  App.jsx  index.css  index.css.bak
frontend/web/: Dockerfile  app.js  config.js  index.html  package.json  styles.css
infra/: README.md
infra/auth/: README.md
infra/databases/: README.md
infra/databases/postgres/: init.sql
infra/docker/: README.md  docker-compose.yml  gateway.Dockerfile  orchestrator.Dockerfile  rag.Dockerfile
infra/messaging/: README.md
infra/observability/: README.md
infra/reverse-proxy/: README.md
infra/storage/: README.md
scripts/: README.md  init.ps1  init.sh  start.ps1  start.sh  stop.ps1  stop.sh
services/: README.md
services/agent-orchestrator/: Dockerfile  README.md  requirements.txt
services/agent-orchestrator/app/: main.py
services/agent-orchestrator/tests/: conftest.py  test_context.py  test_main.py
services/agents-external/: README.md  dummy_agent.py
services/mcp/: README.md
services/rag/: README.md
tests/: conftest.py
tests/integration/: test_gateway.py
tools/debug/: verify_api.py
tools/scripts/: create_test_pdf.py
(+74 files in other folders)
